Añadido Swipper para el slider en la participación, validaciones por js, agregada licencia GPL V3

--- a/base/templates/base.template.html
+++ b/base/templates/base.template.html
@@ -7,11 +7,13 @@
         <title>{% block title %}Consulta Pública{% endblock %}</title>
         <link rel="stylesheet" type="text/css" href="{% static "plugins/materialize/css/materialize.min.css" %}"/>
         <link rel="stylesheet" type="text/css" href="{% static "plugins/materialize/material_icon/icon.css" %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static "plugins/Swiper/css/swiper.min.css" %}"/>
         <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}"/>
         
         <script src="{% static "plugins/jquery/jquery-3.1.0.min.js" %}"></script>
         <script src="{% static "plugins/materialize/js/materialize.min.js" %}"></script>
         <script src="{% static "plugins/material-dialog/material-dialog.min.js" %}"></script>
+        <script src="{% static "plugins/Swiper/js/swiper.jquery.min.js" %}"></script>
         <script src="{% static "js/funciones.js" %}"></script>
         {% block headScript %}{%endblock%}
     </head>
