Centralizada la función para validar participación, agregados mensajes a sesiones, conectado el login a la api

--- a/base/templates/base.vars.javascript.html
+++ b/base/templates/base.vars.javascript.html
@@ -3,6 +3,14 @@
     // URL para actualizar el combo
     var URL_ACTUALIZAR_COMBO = "{% url 'actualizar_combo' %}" ;
 
+    // URL para participación
+    var URL_PARTICIPACION = "{% url 'participacion_index' %}" ;
+    
+    // URL para validar participación
+    var URL_VALIDAR_PARTICIPACION = "{% url 'participacion_validar' %}" ;
+    
+    // URL para registrar participación
+    var URL_REGISTRAR_PARTICIPACION = "{% url 'participacion_create_nid' %}" ;
     
 </script>
     
