--- a/participacion/templates/participacion.create.html
+++ b/participacion/templates/participacion.create.html
@@ -16,7 +16,9 @@
                     </div>
                 {% endfor %}
                 <div class="swiper-slide">
-                    <button type="submit">Enviar</button>
+                    <div class="center">
+                        <a type="button" class="btn submit" onclick="send_poll();">Enviar</a>
+                    </div>
                 </div>
                 
             </div>
