--- a/base/templates/base.nav.bar.html
+++ b/base/templates/base.nav.bar.html
@@ -5,8 +5,8 @@
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="#!" class="dropdown-button" data-activates="dropdown1">Bienvenido <b>{{request.user.username}}</b> <i class="material-icons right">arrow_drop_down</i></a></li>
       <ul id='dropdown1' class='dropdown-content'>
-        <li><a href="{% url 'update' request.user.id %}">Perfil</a></li>
-        <li><a href="{% url 'consulta_index'%}">Consultas</a></li>
+        <li><a href="">Perfil</a></li>
+        <li><a href="{% url 'participacion_index'%}">Consultas</a></li>
         <li><a href="{% url 'logout' %}">Logout</a></li>
       </ul>
     </ul>
