Acomodados colores de input, agregada config para bd en postgres, agregada sección para visualizar la participación

--- a/base/templates/base.nav.bar.html
+++ b/base/templates/base.nav.bar.html
@@ -1,4 +1,4 @@
-<nav class="">
+<nav class="blue darken-3">
   <div class="nav-wrapper">
     <a class="brand-logo" href="{% url 'inicio' %}">Participación de Consultas</a>
     {% if request.user.is_authenticated %}
@@ -7,6 +7,7 @@
       <ul id='dropdown1' class='dropdown-content'>
         <li><a href="">Perfil</a></li>
         <li><a href="{% url 'participacion_index'%}">Consultas</a></li>
+        <li><a href="{% url 'mi_participacion' %}">Mi Participación</a></li>
         <li><a href="{% url 'logout' %}">Logout</a></li>
       </ul>
     </ul>
