--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -7,9 +7,9 @@
         <p>Este sistema le permite realizar de manera flexible, sistemática y sencilla para
         todo tipo de consultas.</p>
         <h3>¿Deseas participar en alguna consulta?</h3>
-        <a type="button" href="{% url 'participacion_index' %}" class="btn">Participar</a><br><br>
+        <a type="button" href="{% url 'participacion_index' %}" class="btn waves-effect blue lighten-1">Participar</a><br><br>
         <p>Éste es el sitio indicado para iniciar.</p><br>
-        <a type="button" href="{% url 'register' %}" class="btn">Registrarse</a><br><br>
-        <a type="button" href="{% url 'login' %}" class="btn">Iniciar Sesión</a>
+        <a type="button" href="{% url 'register' %}" class="btn waves-effect blue lighten-1">Registrarse</a><br><br>
+        <a type="button" href="{% url 'login' %}" class="btn waves-effect blue lighten-1">Iniciar Sesión</a>
         </div>
 {% endblock %}
