--- a/participacion/templates/participacion.create.html
+++ b/participacion/templates/participacion.create.html
@@ -17,7 +17,7 @@
                 {% endfor %}
                 <div class="swiper-slide">
                     <div class="center">
-                        <a type="button" class="btn submit" onclick="send_poll();">Enviar</a>
+                        <a type="button" class="btn submit waves-effect blue lighten-1" onclick="send_poll();">Enviar</a>
                     </div>
                 </div>
                 
@@ -26,7 +26,7 @@
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
         </div>
-        <a type="button" class="btn" href="{% url 'participacion_index' %}">Regresar</a>
+        <a type="button" class="btn waves-effect blue lighten-1" href="{% url 'participacion_index' %}">Regresar</a>
     </form>
                   
 {% endblock %}
