--- a/users/templates/user.register.html
+++ b/users/templates/user.register.html
@@ -154,7 +154,7 @@
       <br />
 
       <div class="col m12 s12">
-         <button type="submit" class="btn waves-effect">Registrarse</button>
+         <button type="submit" class="btn waves-effect blue lighten-1">Registrarse</button>
       </div>
     </form>
   </div>
