--- a/base/templates/base.footer.html
+++ b/base/templates/base.footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer">
+<footer class="page-footer blue darken-3">
     <div class="">
         <div class="center">
             <p>
