--- a/base/templates/base.paginator.html
+++ b/base/templates/base.paginator.html
@@ -1,12 +1,10 @@
-<div class="text-center">
-    <ul class="pagination pagination-sm">
+<div class="center">
+    <ul class="pagination">
         {% if paginator.has_previous %}
             <li>
-                <span>
-                    <a href="?page={{ paginator.previous_page_number }}">
-                        <span class="glyphicon glyphicon-chevron-left"></span> Anterior
-                    </a>
-                </span>
+                <a href="?page={{ paginator.previous_page_number }}">
+                    <i class="material-icons">chevron_left</i> Anterior
+                </a>
             </li>
         {% endif %}
             <li>
@@ -14,11 +12,9 @@
             </li>
         {% if paginator.has_next %}
             <li>
-                <span>
-                    <a href="?page={{ paginator.next_page_number }}">
-                        Siguiente <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
-                </span>
+                <a href="?page={{ paginator.next_page_number }}">
+                    Siguiente <i class="material-icons">chevron_right</i>
+                </a>
             </li>
         {% endif %}
     </ul>
