Añadidas funciones para cargar los municipios y parroquias de acuerdo al seleccionado, todo por REST

--- a/base/templates/base.vars.javascript.html
+++ b/base/templates/base.vars.javascript.html
@@ -1,7 +1,10 @@
 {% load static from staticfiles %}
 <script type="text/javascript">
-    // URL para actualizar el combo
-    var URL_ACTUALIZAR_COMBO = "{% url 'actualizar_combo' %}" ;
+    // URL para obtener municipios
+    var URL_BUSCAR_MUNICIPIO = "{% url 'buscar_municipio' %}" ;
+    
+    // URL para obtener parroquias
+    var URL_BUSCAR_PARROQUIA = "{% url 'buscar_parroquia' %}" ;
 
     // URL para participación
     var URL_PARTICIPACION = "{% url 'participacion_index' %}" ;
