Agregada validación de visualización en el home, pasado el nuevo token de consulta

--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -8,8 +8,10 @@
         todo tipo de consultas.</p>
         <h3>¿Deseas participar en alguna consulta?</h3>
         <a type="button" href="{% url 'participacion_index' %}" class="btn waves-effect blue lighten-1">Participar</a><br><br>
-        <p>Éste es el sitio indicado para iniciar.</p><br>
-        <a type="button" href="{% url 'register' %}" class="btn waves-effect blue lighten-1">Registrarse</a><br><br>
-        <a type="button" href="{% url 'login' %}" class="btn waves-effect blue lighten-1">Iniciar Sesión</a>
+        {% if not request.user.is_authenticated %}
+            <p>Éste es el sitio indicado para iniciar.</p><br>
+            <a type="button" href="{% url 'register' %}" class="btn waves-effect blue lighten-1">Registrarse</a><br><br>
+            <a type="button" href="{% url 'login' %}" class="btn waves-effect blue lighten-1">Iniciar Sesión</a>
+        {% endif %}
         </div>
 {% endblock %}
