Refactor de plugins de javascript

--- a/base/templates/base.template.html
+++ b/base/templates/base.template.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="{% static "plugins/Swiper/css/swiper.min.css" %}"/>
         <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}"/>
         
-        <script src="{% static "plugins/jquery/jquery-3.1.0.min.js" %}"></script>
+        <script src="{% static "plugins/jquery/jquery-3.3.1.min.js" %}"></script>
         <script src="{% static "plugins/materialize/js/materialize.min.js" %}"></script>
         <script src="{% static "plugins/material-dialog/material-dialog.min.js" %}"></script>
         <script src="{% static "plugins/Swiper/js/swiper.jquery.min.js" %}"></script>
@@ -33,7 +33,8 @@
     </body>
     <script>
         $(document).ready(function() {
-            $('select').material_select();
+            $('select').formSelect();
+            $(".dropdown-trigger").dropdown({coverTrigger:false});
         });
     </script>
     {% block extraJs %}{%endblock%}
