--- a/users/templates/user.login.html
+++ b/users/templates/user.login.html
@@ -26,8 +26,10 @@
         
         <div class="row">
             <p class="center">
-                {{form.remember_me}}
-                <label for="id_remember_me">{{form.remember_me.label}}</label>
+                <label for="id_remember_me">
+                    {{form.remember_me}}
+                    <span>{{form.remember_me.label}}</span>
+                </label>
             </p>
         </div>
         <div class="row">
